--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  font-family: sans-serif;
+  margin: 0 !important;
+  min-height: 100%;
+}
+
+body {
+  height: 100vh;
+  background: #efefef;
+}
