--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////
 
-@media screen and (max-device-width: 589px) {
+@media screen and (max-width: 589px) {
   body {
     background-color: #f0f0f0;
   }
@@ -9,6 +9,11 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+  }
+
+  .loader {
+    margin-top: 10px;
+    text-align: center;
   }
 
   .launchHeader {
@@ -60,25 +65,6 @@
     font-weight: bold;
   }
 
-  .loader {
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 10px solid #3498db;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-    margin: auto;
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
   .btn:focus {
     outline: none;
     background-color: #349603;
@@ -118,7 +104,7 @@
   }
 
   .successDiv {
-    margin-left: 30px;
+    margin-left: 20px;
     text-align: center;
     width: 660px;
     background: white;
@@ -177,6 +163,11 @@
     font-size: 1.2rem;
   }
 
+  .loader {
+    margin-top: 10px;
+    text-align: center;
+  }
+
   .imgCss {
     width: 600px;
     height: auto;
@@ -220,25 +211,6 @@
     font-weight: bold;
   }
 
-  .loader {
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 10px solid #3498db;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-    margin: auto;
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
   .btn:focus {
     outline: none;
     background-color: #349603;
@@ -278,7 +250,7 @@
   }
 
   .successDiv {
-    margin-left: 30px;
+    margin-left: 20px;
     text-align: center;
     width: 660px;
     background: white;
@@ -335,6 +307,11 @@
     height: auto;
   }
 
+  .loader {
+    margin-top: 10px;
+    text-align: center;
+  }
+
   .infoDiv {
     padding: 10px;
     line-height: 30px;
@@ -376,25 +353,6 @@
     background-color: #f0f0f0;
     font-weight: bold;
     text-align: center;
-  }
-
-  .loader {
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 10px solid #3498db;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-    margin: auto;
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
   }
 
   .btn:focus {
@@ -507,6 +465,11 @@
     padding: 10px;
   }
 
+  .loader {
+    margin-top: 10px;
+    text-align: center;
+  }
+
   .mainDiv {
     background-color: white;
     margin-left: 20px;
@@ -525,25 +488,6 @@
     background-color: #f0f0f0;
     font-weight: bold;
     text-align: center;
-  }
-
-  .loader {
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 10px solid #3498db;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-    margin: auto;
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
   }
 
   .btn:focus {
@@ -636,7 +580,7 @@
   .card {
     margin: 0px 10px 10px 10px;
     border-radius: 5px;
-    width: 200px;
+    width: 250px;
     background-color: white;
     padding: 10px;
     display: flex;
@@ -647,16 +591,22 @@
   .launchHeader {
     text-align: center;
     padding-bottom: 1px;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .imgCss {
-    width: 190px;
+    width: 230px;
     height: auto;
   }
 
+  .loader {
+    margin-top: 10px;
+    text-align: center;
+  }
+
   .filtersDiv {
-    text-align: left;
+    background-color: white;
+    width: 180px;
     padding: 10px;
   }
 
@@ -667,7 +617,7 @@
   }
 
   .hr {
-    width: 120px;
+    width: 180px;
   }
 
   .footer {
@@ -680,25 +630,6 @@
     text-align: center;
   }
 
-  .loader {
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 10px solid #3498db;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-    margin: auto;
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
   .btn:focus {
     outline: none;
     background-color: #349603;
@@ -707,11 +638,11 @@
     border: 0;
     margin-top: 5px;
     margin-left: 5px;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .title {
-    font-size: 1.2rem !important;
+    font-size: 2rem !important;
     font-weight: 900;
     padding: 10px;
     position: fixed;
@@ -733,7 +664,7 @@
 
   .grid {
     display: grid;
-    grid-template-columns: 1.3fr 1.3fr 1.3fr 0.8fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-left: 30px;
     padding-top: 15px;
   }
@@ -767,16 +698,16 @@
     border: 0;
     margin-top: 5px;
     margin-left: 5px;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .infoDiv {
     padding: 10px;
     line-height: 25px;
-    font-size: 0.9rem !important;
+    font-size: 1rem !important;
   }
 
   .rowCss {
-    margin-top: 40px;
+    margin-top: 60px;
   }
 }
