--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,10 @@ html,
 body {
   font-family: sans-serif;
   margin: 0 !important;
-  min-height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
-  height: 100vh;
   background: #efefef;
 }
